src/snapshots/todoro__ui__tests__options_delete_section.snap
---
source: src/ui.rs
expression: "render_sized(&app, 70, 40).backend()"
---
"╭ Home ──────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1.╭ Options ─────────────────────────────────────────────────────╮  │"
"│  │     Highlights use reversed text.                            │  │"
"│  │                                                              │  │"
"│  │ Items                                                        │  │"
"│  │ [ ] Pin new items                                            │  │"
"│  │     New items start pinned, so they move on to today until   │  │"
"│  │     they're done. m unpins one.                              │  │"
"│  │ [ ] 12-hour clock                                            │  │"
"│  │     Show deadline times like 11PM instead of 23:00. You can  │  │"
"│  │     type either.                                             │  │"
"│  │                                                              │  │"
"│  │ Notes                                                        │  │"
"│  │ Notes editor: Built-in                                       │  │"
"│  │   A command to open notes files with, like nvim. Leave it    │  │"
"│  │   empty for todoro's own editor.                             │  │"
"│  │                                                              │  │"
"│  │ Data                                                         │  │"
"│  │ Todoro folder: ~/todoro                                      │  │"
"│  │   Where every workspace is kept. Enter to move them all to   │  │"
"│  │   another folder.                                            │  │"
"│  │                                                              │  │"
"│  │ Delete                                                       │  │"
"│  │ Delete all items and notes in Home                           │  │"
"│  │   Every day's items, and their notes files. The workspace    │  │"
"│  │   stays, empty.                                              │  │"
"│  │ Delete all notes in Home                                     │  │"
"│  │   Every item's notes, and the notes files. The items stay.   │  │"
"│  │ Delete all notes in every workspace                          │  │"
"│  │   Every item's notes in every workspace, and the notes       │  │"
"│  │   files. The items stay.                                     │  │"
"│  │ Delete all items and notes in every workspace                │  │"
"│  │   Every workspace is emptied of items and notes. The         │  │"
"│  │   workspaces stay.                                           │  │"
"│  │ Reset todoro                                                 │  │"
"│  │   Deletes every workspace and your settings, then starts     │  │"
"│  │   again as if newly installed: choose a folder, then see     │  │"
"│  │   what's new. Other files in the todoro folder stay.         │  │"
"╰──╰─────── j/k move · space toggle · / search · esc close ───────╯──╯"
" OPTIONS   j/k move  space toggle  / search  esc close                "
