src/snapshots/todoro__ui__tests__options_popup.snap
---
source: src/ui.rs
expression: "render_sized(&app, 70, 16).backend()"
---
"╭────────────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1.╭ Options ─────────────────────────────────────────────────────╮  │"
"│  │ Accessibility                                                │  │"
"│  │ [x] Semantic priority icons                                  │  │"
"│  │     Show ∧ High, – Medium and ∨ Low beside triaged items,    │  │"
"│  │     not just a colour.                                       │  │"
"│  │ [ ] No colours                                               │  │"
"│  │     Draw everything in the terminal's own colours.           │  │"
"│  │     Highlights use reversed text.                            │  │"
"│  │                                                              │  │"
"│  │ Items                                                        │  │"
"│  │ [ ] Pin new items                                            │  │"
"│  │     New items start pinned, so they move on to today until   │  │"
"│  │     they're done. m unpins one.                              │  │"
"╰──╰─────── j/k move · space toggle · / search · esc close ───────╯──╯"
" OPTIONS   j/k move  space toggle  / search  esc close                "
