src/snapshots/todoro__ui__tests__options_popup_narrow.snap
---
source: src/ui.rs
expression: "render_sized(&app, 30, 12).backend()"
---
"╭─ Mon, Oct 5 2026 (today) ──╮"
"│1╭ Options ───────────────╮ │"
"│ │ Accessibility          │ │"
"│ │ [ ] Semantic priority  │ │"
"│ │     icons              │ │"
"│ │     Show ∧ High, –     │ │"
"│ │     Medium and ∨ Low   │ │"
"│ │     beside triaged     │ │"
"│ │     items, not just a  │ │"
"│ │     colour.            │ │"
"╰─╰──── / search · esc ────╯─╯"
" OPTIONS   esc close          "
