src/snapshots/todoro__ui__tests__options_searching.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭ Home ──────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1. Home item                                                        │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│  ╭ Options ─────────────────────────────────────────────────────╮  │"
"│  │ Search: notes                                                │  │"
"│  │ ──────────────────────────────────────────────────────────── │  │"
"│  │ Notes                                                        │  │"
"│  │ Notes editor: Built-in                                       │  │"
"│  │   A command to open notes files with, like nvim. Leave it    │  │"
"│  │   empty for todoro's own editor.                             │  │"
"│  │                                                              │  │"
"│  │ Delete                                                       │  │"
"│  │ Delete all items and notes in Home                           │  │"
"│  │   Every day's items, and their notes files. The workspace    │  │"
"│  │   stays, empty.                                              │  │"
"│  │ Delete all notes in Home                                     │  │"
"│  │   Every item's notes, and the notes files. The items stay.   │  │"
"│  │ Delete all notes in every workspace                          │  │"
"│  │   Every item's notes in every workspace, and the notes       │  │"
"│  │   files. The items stay.                                     │  │"
"│  │ Delete all items and notes in every workspace                │  │"
"│  │   Every workspace is emptied of items and notes. The         │  │"
"│  │   workspaces stay.                                           │  │"
"│  ╰────────── type to search · enter keep · esc clear ───────────╯  │"
"│                                                                    │"
"│                                                                    │"
"╰───────── h ← prev day · k ↑ up · j ↓ down · next day → l ──────────╯"
" OPTIONS   type to search  enter keep  esc clear                      "
