src/snapshots/todoro__ui__tests__options_typing_a_notes_editor.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭────────────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1. Buy milk                                                         │"
"│                                                                    │"
"│  ╭ Options ─────────────────────────────────────────────────────╮  │"
"│  │ Accessibility                                                │  │"
"│  │ [ ] Semantic priority icons                                  │  │"
"│  │     Show ∧ High, – Medium and ∨ Low beside triaged items,    │  │"
"│  │     not just a colour.                                       │  │"
"│  │ [ ] No colours                                               │  │"
"│  │     Draw everything in the terminal's own colours.           │  │"
"│  │     Highlights use reversed text.                            │  │"
"│  │                                                              │  │"
"│  │ Notes                                                        │  │"
"│  │ Notes editor: Built-in                                       │  │"
"│  │   A command to open notes files with, like nvim. Leave it    │  │"
"│  │   empty for todoro's own editor.                             │  │"
"│  │   Command:                                                   │  │"
"│  │   › nvim                                                     │  │"
"│  ╰──────────── j/k move · space toggle · esc close ─────────────╯  │"
"│                                                                    │"
"╰───────── h ← prev day · k ↑ up · j ↓ down · next day → l ──────────╯"
" OPTIONS   j/k move  space toggle  esc close                          "
