src/snapshots/todoro__ui__tests__options_with_a_notes_editor_set.snap
---
source: src/ui.rs
expression: "render_sized(&app, 70, 18).backend()"
---
"╭────────────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1.╭ Options ─────────────────────────────────────────────────────╮  │"
"│  │     Highlights use reversed text.                            │  │"
"│  │                                                              │  │"
"│  │ Items                                                        │  │"
"│  │ [ ] Pin new items                                            │  │"
"│  │     New items start pinned, so they move on to today until   │  │"
"│  │     they're done. m unpins one.                              │  │"
"│  │ [ ] 12-hour clock                                            │  │"
"│  │     Show deadline times like 11PM instead of 23:00. You can  │  │"
"│  │     type either.                                             │  │"
"│  │                                                              │  │"
"│  │ Notes                                                        │  │"
"│  │ Notes editor: nvim                                           │  │"
"│  │   A command to open notes files with, like nvim. Leave it    │  │"
"│  │   empty for todoro's own editor.                             │  │"
"╰──╰─────── j/k move · space toggle · / search · esc close ───────╯──╯"
" OPTIONS   j/k move  space toggle  / search  esc close                "
